PI-577 Add endpoint for MAPPA and RoSH history (#1246)
